sidescrolling on mobile problem solved

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -8,7 +8,11 @@
   overflow-x: hidden;
 
   &__body {
+    position: relative;
+
     margin: 0;
     padding: 0;
+
+    overflow-x: hidden;
   }
 }
